# dyana

./: .gitignore  README.md  detect_stereo.py  project_info.py  project_snapshot.md  pyproject.toml  readline.py
.github/workflows/: docs.yml
artifacts/eval_demo/: hard_real_ref.npy  manifest.json
docs/: CONCEPT.md  DYANA_ROADMAP.md  DYANA_WEEK2_DAY_BY_DAY_PLAN.md  DYANA_WEEK2_PLAN.md  Makefile  architecture.rst  axis1_modules.md  conf.py  dyana_week_1_day_by_day_roadmap.md  eval_runs.md  index.rst  project_notes.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: index.rst
src/dyana/: __init__.py
tests/: conftest.py  test_cli_main.py  test_decoder_constraints.py  test_ipu_postprocess.py  test_project_info.py  test_state_space.py  test_timebase.py  test_version.py
tests/api/: test_functions.py  test_types.py
tests/artifacts/: test_hashing.py  test_serialization.py  test_store.py
tests/asr/: test_base.py  test_chunking.py  test_transcript.py  test_whisper_backend.py
tests/contracts/: test_alignment.py  test_audio.py  test_decoder.py  test_diagnostics.py  test_evidence.py  test_transcript.py
tests/core/: test_cache.py  test_evidence_bundle.py  test_evidence_track.py  test_module_stubs.py  test_resample.py  test_timebase.py
tests/decode/: test_decoder.py  test_fusion.py  test_high_recall.py  test_leak_diagnostics.py  test_leak_integration.py  test_params_threading.py  test_pipeline_synthetic.py
tests/errors/: test_config.py  test_guards.py  test_logging.py  test_pipeline.py  test_reporter.py  test_types.py
tests/eval/: test_harness_synthetic.py  (+4 more)
(+191 files in other folders)
