[project]
name = "dyana"
version = "0.0.0"
description = "DYadic Annotation of Naturalistic Audio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hiro" }]
dependencies = [
  "numpy>=1.23",
  "soundfile>=0.12",
  "webrtcvad>=2.0.10",
  "praatio>=6.0.0",
  "typer>=0.9",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "mypy>=1.5",
  "types-setuptools",
]
# If you later want nicer CLI completion and speed:
# cli = ["typer[all]>=0.9"]

[project.scripts]
dyana = "dyana.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning:webrtcvad",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
